added good and bad classes

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <h3>The story</h3>
     <p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, “We are so sorry to hear your horse has run away. This is most unfortunate.” The farmer said, “Maybe.” The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!” The farmer again said, “Maybe.” 
 
-        The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, “Oh dear, that’s too bad,” and the farmer responded, “Maybe.” The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, “Maybe.”
+        The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, “Oh dear, that’s too <dfn class="bad">bad</dfn>,” and the farmer responded, “Maybe.” The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, “Maybe.”
         
-        The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.
+        The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is <dfn class="good">good</dfn> or <dfn class="bad">bad</dfn> — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of <dfn class="good">good</dfn> fortune.
         
         Alan Watts</p>
 
@@ -30,7 +30,7 @@
     <table>
         <tr>
             <td>Even</td>
-            <td>Good of Bad?</td>
+            <td><dfn class="good">Good</dfn> of <dfn class="bad">Bad?</dfn></td>
         </tr>
         <tr>
             <td>Lose a horse</td>
@@ -51,7 +51,7 @@
     </table>
     <p>Table representing the farmer's philosophy.</p>
     <h3>Conclusion</h3>
-    <p>Good and Bad are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...</p>
+    <p><dfn class="good">Good</dfn> and <dfn class="bad">Bad</dfn> are just one perspective. Bananas are <dfn class="good">good</dfn> for monkeys, but monkeys are not <dfn class="good">good</dfn> for bananas. Let's not make a big deal out of it...</p>
     <footer>
         Copyright Just Another Company 2017. All right reserved. Adapted from this article: https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/
     </footer>
