--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Story of the Chinese Farmer</h1>
-    <p>11 may 2016, Alexandre Gorius</p>
+    <header>
+        <h1>Story of the Chinese Farmer</h1>
+        <p>11 may 2016, Alexandre Gorius</p>
+    </header>
     <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="bananas for sale">
 
     <h2>Preamble</h2>
