--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </header>
     <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="bananas for sale">
 
-    <h2>Preamble</h2>
+    <h2 class="banner" id="bannerh2">Preamble</h2>
     <ul>
         <li>read this ones</li>
         <li>then read it again</li>
         <li>then tell it to your best friend</li>
     </ul>
-    <h2>The story</h2>
+    <h2 class="banner" id="bannerh2">The story</h2>
     <p id="first">Once upon a time there was a Chinese <a title="i wanna be a farmer" target="_blank" href="https://nl.wikipedia.org/wiki/Farmer" class="insideLinks">farmer</a> whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, <q class="village">We are so sorry to hear your horse has run away. This is most unfortunate.</q> The farmer said, <q class="farmer"><em>Maybe</em>.</q> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q class="village">Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q> The farmer again said, <q class="farmer"><em>Maybe</em>.</q> 
 
         The following day his son tried to break one of the <a title="wanna buy some horses" target="_blank" href="https://nl.wikipedia.org/wiki/horses" class="insideLinks">horses</a>, and while riding it, he was thrown and broke his leg. The neighbors then said, <q class="village">Oh dear, that’s too <em class="bad">bad</em>,</q> and the farmer responded, <q class="farmer"><em>Maybe</em>.</q> The next day the conscription <a title="watch the popo's" href="https://en.wikipedia.org/wiki/Officer" target="_blank" class="insideLinks">officers</a> came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, <q class="village">Isn’t that great!</q> Again, he said, <q class="farmer"><em>Maybe</em>.</q>
@@ -29,7 +29,7 @@
         
         Alan Watts</p>
 
-    <h2>Here is this dialog in the form of a table</h2>
+    <h2 class="banner">Here is this dialog in the form of a table</h2>
     <table>
         <tr class="grey">
             <td>Even</td>
@@ -53,7 +53,7 @@
         </tr>
     </table>
     <p>Table representing the farmer's philosophy.</p>
-    <h2>Conclusion</h2>
+    <h2 class="banner">Conclusion</h2>
     <p><em class="good">Good</em> and <em class="bad">Bad</em> are just one perspective. Bananas are <em class="good">good</em> for monkeys, but monkeys are not <em class="good">good</em> for bananas. Let's not make a big deal out of it...</p>
     <footer>
         Copyright Just Another Company 2017. All right reserved. Adapted from this article: https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/
