structuring and styling

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="bananas for sale">
 
     <h2 class="banner" id="bannerh2">Preamble</h2>
-    <ul>
+    <ul class="bannerOther">
         <li>read this ones</li>
         <li>then read it again</li>
         <li>then tell it to your best friend</li>
     </ul>
     <h2 class="banner" id="bannerh2">The story</h2>
-    <p id="first">Once upon a time there was a Chinese <a title="i wanna be a farmer" target="_blank" href="https://nl.wikipedia.org/wiki/Farmer" class="insideLinks">farmer</a> whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, <q class="village">We are so sorry to hear your horse has run away. This is most unfortunate.</q> The farmer said, <q class="farmer"><em>Maybe</em>.</q> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q class="village">Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q> The farmer again said, <q class="farmer"><em>Maybe</em>.</q> 
+    <p class="bannerOther" id="first">Once upon a time there was a Chinese <a title="i wanna be a farmer" target="_blank" href="https://nl.wikipedia.org/wiki/Farmer" class="insideLinks">farmer</a> whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, <q class="village">We are so sorry to hear your horse has run away. This is most unfortunate.</q> The farmer said, <q class="farmer"><em>Maybe</em>.</q> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q class="village">Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q> The farmer again said, <q class="farmer"><em>Maybe</em>.</q> 
 
         The following day his son tried to break one of the <a title="wanna buy some horses" target="_blank" href="https://nl.wikipedia.org/wiki/horses" class="insideLinks">horses</a>, and while riding it, he was thrown and broke his leg. The neighbors then said, <q class="village">Oh dear, that’s too <em class="bad">bad</em>,</q> and the farmer responded, <q class="farmer"><em>Maybe</em>.</q> The next day the conscription <a title="watch the popo's" href="https://en.wikipedia.org/wiki/Officer" target="_blank" class="insideLinks">officers</a> came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, <q class="village">Isn’t that great!</q> Again, he said, <q class="farmer"><em>Maybe</em>.</q>
         
