--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         Alan Watts</p>
 
-    <h2 class="banner">Here is this dialog in the form of a table</h2>
+    <h2 class="banner" id="smallerBanner">Here is this dialog in the form of a table</h2>
     <table>
         <tr class="grey">
             <td>Even</td>
@@ -53,7 +53,7 @@
         </tr>
     </table>
     <p>Table representing the farmer's philosophy.</p>
-    <h2 class="banner">Conclusion</h2>
+    <h2 class="banner" id="smallerBanner">Conclusion</h2>
     <p><em class="good">Good</em> and <em class="bad">Bad</em> are just one perspective. Bananas are <em class="good">good</em> for monkeys, but monkeys are not <em class="good">good</em> for bananas. Let's not make a big deal out of it...</p>
     <footer>
         Copyright Just Another Company 2017. All right reserved. Adapted from this article: https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/
