--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             <td>Avoid war</td>
             <td><em>Maybe</em></td>
         </tr>
+        <tfoot>
+            <tr><td>Table representing the farmer's philosophy.</td></tr>
+        </tfoot>
     </table>
-    <p>Table representing the farmer's philosophy.</p>
     <h2 class="banner" id="smallerBanner">Conclusion</h2>
     <p><em class="good">Good</em> and <em class="bad">Bad</em> are just one perspective. Bananas are <em class="good">good</em> for monkeys, but monkeys are not <em class="good">good</em> for bananas. Let's not make a big deal out of it...</p>
     <footer>
