--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h2 class="banner" id="smallerBanner">Conclusion</h2>
     <p><em class="good">Good</em> and <em class="bad">Bad</em> are just one perspective. Bananas are <em class="good">good</em> for monkeys, but monkeys are not <em class="good">good</em> for bananas. Let's not make a big deal out of it...</p>
     <footer>
-        Copyright Just Another Company 2017. All right reserved. Adapted from this article: https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/
+        <small>Copyright Just Another Company 2017. All right reserved. Adapted from this article: https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/</small>
     </footer>
 </body>
 </html>
